--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/snake.svg?color_snake=#B23EFF&color_dots=#1A0045,#36007D,#5E00B8,#7F3CFF,#9A6CFF
+            dist/snake.svg?color_snake=#c91e81&color_dots=#161b22,#D1007F,#FE2499,#FF4EDB,#FF69B4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
